milestone 2 video link

--- a/AssignmentOne/AssignmentOne/Readme
+++ b/AssignmentOne/AssignmentOne/Readme
@@ -8,4 +8,6 @@ I have implemented these concepts to create a Checklist list that can be added t
 
 There is also documentation in MyDOc as well as struct commentary
 
-First milestone video link
+Second milestone video link
+
+https://www.kapwing.com/videos/6426468545960401ac289b3f
